--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,6 @@
   <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-  <h1 id="title">Este es mi sitio web</h1>
+  <h1 id="title">Pokedex API</h1>
 </body>
 </html>
