--- a/public/index.html
+++ b/public/index.html
@@ -4,10 +4,14 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Pokedex</title>
+  <link href="https://fonts.cdnfonts.com/css/pokemon-solid" rel="stylesheet">
   <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
   <h1 id="title">Pokedex API</h1>
+  <h3>
+    Check the documentation <a href="/doc">here</a>
+  </h3>
 </body>
 </html>
